// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Manager who has reportees & metrics 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-438 MuiPaper-elevation4-444 MuiPaper-rounded-439 MUIDataTable-paper-433 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-475 MuiToolbar-regular-477 MuiToolbar-gutters-476 MUIDataTableToolbar-root-465"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-466"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-468"
        >
          <h6
            className="MuiTypography-root-479 MuiTypography-h6-496 MUIDataTableToolbar-titleText-469"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-467"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-529 MuiIconButton-root-523 MUIDataTableToolbar-icon-470"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-528"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-532"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-640"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-529 MuiIconButton-root-523 MUIDataTableToolbar-icon-470"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-528"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-532"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-640"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-544"
    />
    <div
      className={null}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-546 MUIDataTable-tableRoot-434"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-436"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-549 MUIDataTableHead-responsiveStacked-548 MUIDataTableHead-main-547"
        >
          <tr
            className="MuiTableRow-root-551 MuiTableRow-head-554 MUIDataTableHeadRow-root-550"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-head-574 MUIDataTableHeadCell-root-565 MUIDataTableHeadCell-fixedHeader-566"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-572"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-569"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-570"
                >
                  <span
                    className="MuiButtonBase-root-529 MuiTableSortLabel-root-585"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-592"
        >
          <tr
            className="MuiTableRow-root-551 MuiTableRow-hover-553 MUIDataTableBodyRow-root-593 MUIDataTableBodyRow-hover-594 MUIDataTableBodyRow-responsiveStacked-596"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              <a
                className=""
                href="https://mozilla.org/1"
                rel="noopener noreferrer"
                target="_blank"
              >
                1
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-cellHide-598 MUIDataTableBodyCell-cellStacked-599"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-573 MuiTableCell-body-575 MUIDataTableBodyCell-root-597 MUIDataTableBodyCell-responsiveStacked-600"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-546"
    >
      <tfoot
        className="MuiTableFooter-root-604"
      >
        <tr
          className="MuiTableRow-root-551 MuiTableRow-footer-555"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-573 MuiTableCell-footer-576 MUIDataTablePagination-root-601"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-475 MuiToolbar-regular-477 MuiToolbar-gutters-476 MuiTablePagination-toolbar-606 MUIDataTablePagination-toolbar-602"
            >
              <div
                className="MuiTablePagination-spacer-607"
              />
              <span
                className="MuiTypography-root-479 MuiTypography-caption-489 MuiTypography-colorInherit-508 MuiTablePagination-caption-608"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-622 MuiTablePagination-input-612"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-615 MuiTablePagination-selectRoot-609 MUIDataTablePagination-selectRoot-603"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-616 MuiTablePagination-select-610 MuiSelect-selectMenu-619 MuiInputBase-input-632"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-532 MuiSelect-icon-621 MuiTablePagination-selectIcon-611"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-479 MuiTypography-caption-489 MuiTypography-colorInherit-508 MuiTablePagination-caption-608"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-614"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiIconButton-root-523 MuiIconButton-colorInherit-524 MuiIconButton-disabled-527"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-528"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-532"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiIconButton-root-523 MuiIconButton-colorInherit-524 MuiIconButton-disabled-527"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-528"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-532"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-437"
    />
  </div>
</div>
`;

exports[`renders Manager who has reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-223 MuiPaper-elevation4-229 MuiPaper-rounded-224 MUIDataTable-paper-218 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-260 MuiToolbar-regular-262 MuiToolbar-gutters-261 MUIDataTableToolbar-root-250"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-251"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-253"
        >
          <h6
            className="MuiTypography-root-264 MuiTypography-h6-281 MUIDataTableToolbar-titleText-254"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-252"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-314 MuiIconButton-root-308 MUIDataTableToolbar-icon-255"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-313"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-317"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-425"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-314 MuiIconButton-root-308 MUIDataTableToolbar-icon-255"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-313"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-317"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-425"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-329"
    />
    <div
      className={null}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-331 MUIDataTable-tableRoot-219"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-221"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-334 MUIDataTableHead-responsiveStacked-333 MUIDataTableHead-main-332"
        >
          <tr
            className="MuiTableRow-root-336 MuiTableRow-head-339 MUIDataTableHeadRow-root-335"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-head-359 MUIDataTableHeadCell-root-350 MUIDataTableHeadCell-fixedHeader-351"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-357"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-354"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-355"
                >
                  <span
                    className="MuiButtonBase-root-314 MuiTableSortLabel-root-370"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-377"
        >
          <tr
            className="MuiTableRow-root-336 MuiTableRow-hover-338 MUIDataTableBodyRow-root-378 MUIDataTableBodyRow-hover-379 MUIDataTableBodyRow-responsiveStacked-381"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-cellHide-383 MUIDataTableBodyCell-cellStacked-384"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-358 MuiTableCell-body-360 MUIDataTableBodyCell-root-382 MUIDataTableBodyCell-responsiveStacked-385"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-331"
    >
      <tfoot
        className="MuiTableFooter-root-389"
      >
        <tr
          className="MuiTableRow-root-336 MuiTableRow-footer-340"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-358 MuiTableCell-footer-361 MUIDataTablePagination-root-386"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-260 MuiToolbar-regular-262 MuiToolbar-gutters-261 MuiTablePagination-toolbar-391 MUIDataTablePagination-toolbar-387"
            >
              <div
                className="MuiTablePagination-spacer-392"
              />
              <span
                className="MuiTypography-root-264 MuiTypography-caption-274 MuiTypography-colorInherit-293 MuiTablePagination-caption-393"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-407 MuiTablePagination-input-397"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-400 MuiTablePagination-selectRoot-394 MUIDataTablePagination-selectRoot-388"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-401 MuiTablePagination-select-395 MuiSelect-selectMenu-404 MuiInputBase-input-417"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-317 MuiSelect-icon-406 MuiTablePagination-selectIcon-396"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-264 MuiTypography-caption-274 MuiTypography-colorInherit-293 MuiTablePagination-caption-393"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-399"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-314 MuiButtonBase-disabled-315 MuiIconButton-root-308 MuiIconButton-colorInherit-309 MuiIconButton-disabled-312"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-313"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-317"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-314 MuiButtonBase-disabled-315 MuiIconButton-root-308 MuiIconButton-colorInherit-309 MuiIconButton-disabled-312"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-313"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-317"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-222"
    />
  </div>
</div>
`;

exports[`renders Someone with no reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation4-14 MuiPaper-rounded-9 MUIDataTable-paper-3 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46 MUIDataTableToolbar-root-35"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-36"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-38"
        >
          <h6
            className="MuiTypography-root-49 MuiTypography-h6-66 MUIDataTableToolbar-titleText-39"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-37"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-99 MuiIconButton-root-93 MUIDataTableToolbar-icon-40"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-98"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-102"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-210"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-99 MuiIconButton-root-93 MUIDataTableToolbar-icon-40"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-98"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-102"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-210"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-114"
    />
    <div
      className={null}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-116 MUIDataTable-tableRoot-4"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-6"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-119 MUIDataTableHead-responsiveStacked-118 MUIDataTableHead-main-117"
        >
          <tr
            className="MuiTableRow-root-121 MuiTableRow-head-124 MUIDataTableHeadRow-root-120"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-head-144 MUIDataTableHeadCell-root-135 MUIDataTableHeadCell-fixedHeader-136"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-142"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-139"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-140"
                >
                  <span
                    className="MuiButtonBase-root-99 MuiTableSortLabel-root-155"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-162"
        >
          <tr
            className="MuiTableRow-root-121 MuiTableRow-hover-123 MUIDataTableBodyRow-root-163 MUIDataTableBodyRow-hover-164 MUIDataTableBodyRow-responsiveStacked-166"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              Manager
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-cellHide-168 MUIDataTableBodyCell-cellStacked-169"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-143 MuiTableCell-body-145 MUIDataTableBodyCell-root-167 MUIDataTableBodyCell-responsiveStacked-170"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-116"
    >
      <tfoot
        className="MuiTableFooter-root-174"
      >
        <tr
          className="MuiTableRow-root-121 MuiTableRow-footer-125"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-143 MuiTableCell-footer-146 MUIDataTablePagination-root-171"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46 MuiTablePagination-toolbar-176 MUIDataTablePagination-toolbar-172"
            >
              <div
                className="MuiTablePagination-spacer-177"
              />
              <span
                className="MuiTypography-root-49 MuiTypography-caption-59 MuiTypography-colorInherit-78 MuiTablePagination-caption-178"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-192 MuiTablePagination-input-182"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-185 MuiTablePagination-selectRoot-179 MUIDataTablePagination-selectRoot-173"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-186 MuiTablePagination-select-180 MuiSelect-selectMenu-189 MuiInputBase-input-202"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    10
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={10}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-102 MuiSelect-icon-191 MuiTablePagination-selectIcon-181"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-49 MuiTypography-caption-59 MuiTypography-colorInherit-78 MuiTablePagination-caption-178"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-184"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-99 MuiButtonBase-disabled-100 MuiIconButton-root-93 MuiIconButton-colorInherit-94 MuiIconButton-disabled-97"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-98"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-102"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-99 MuiButtonBase-disabled-100 MuiIconButton-root-93 MuiIconButton-colorInherit-94 MuiIconButton-disabled-97"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-98"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-102"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-7"
    />
  </div>
</div>
`;
